     the Add-ons Manager dialog used when no columns have been sorted by
     the user.
   * Report errors caused by faulty local .pbl files properly instead of
     presenting them as network errors.
   * Fixed regression from 1.11.0 resulting in memory leaks and/or
     crash-to-desktop situations when failing to connect to an add-ons
     server.
 * AI:
   * Micro AIs:
     * New Simple Attack Micro AI
     * Messenger MAI now works with units (both messenger and escort) without
       weapons and when path to next waypoint is entirely blocked
     * Fixed bug that prevented removal of sticky MAIs
   * Recruitment CA:
     * New Recruitment CA located in src/ai/recruitment is now default CA
     * Created new AI cfg "Strong AI (RCA)" with stronger recruitment
     * Created new AI cfg "Old Recruitment CA" in ai/dev/ to use the old CA
 * Campaigns:
   * Legend of Wesmere:
     * Removed now redundant MP code.
     * Added new CampaignWML attributes: "type", "min_players", "max_players".
     * Added new ScenarioWML attributes: "new_game_title",
       "force_use_map_settings".
     * Adjusted "controller" and side recruits for MP.
     * Now uses default recruitment instead of experimental FAI-recruitment
       in 02_Hostile_Mountains.
   * Liberty:
     * New AI for wolf riders in "The Raid"
 * Engine:
   * CampaignWML support for MP including difficulties, extra defines etc.
   * Use the same codepath to initialize every MP campaign's scenario, thus
     allowing the display of a functional MP "Connect/Wait" screen before the
     next scenario.
   * Reload game config for non-host players in order to match the host's
     config, if possible. Reloads will only happen for MP campaigns using
     CampaignWML syntax.
   * Imagepath function "~ROTATE": Support for rotating by any degree.
 * Graphics
   * Full animations for the Dwarven Thunderer line.
 * Language and i18n:
   * Updated translations: British English, German, Greek, Indonesian,